--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
           <artifactId>cglib</artifactId>
           <version>3.1</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-context</artifactId>
+          <version>4.3.12.RELEASE</version>
+      </dependency>
 
   </dependencies>
 </project>
